--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,15 +4,14 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+    
     {
       "type": "node",
-      "request": "launch",
+      "request": "attach",
       "name": "nodemon",
-      "runtimeExecutable": "nodemon",
-      "program": "${workspaceFolder}/server/index.js",
       "restart": true,
-      "console": "integratedTerminal",
-      "internalConsoleOptions": "neverOpen"
+      "internalConsoleOptions": "neverOpen",
+      "processId": "${command:PickProcess}"
     },
     {
       "type": "chrome",
